--- a/src/components/carousel/CarouselC.css
+++ b/src/components/carousel/CarouselC.css
@@ -36,11 +36,6 @@
   border: 1px solid var(--color-primario);
 }
 
-@media (max-width: 768px) {
-  .custom-carousel {
-    display: none;
-  }
-}
 /* Personalización de los indicadores */
 .carousel-indicators [data-bs-target] {
   width: 15px;
@@ -51,4 +46,16 @@
 
 .carousel-indicators .active {
   background-color: var(--color-primario);
+}
+
+@media (max-width: 768px) {
+  .desktop-carousel {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .mobile-carousel {
+    display: none;
+  }
 }
