--- a/src/pages/DetalleProducto.css
+++ b/src/pages/DetalleProducto.css
@@ -5,6 +5,10 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 1200px;
+  min-height: 500px;
+  margin: auto;
+  overflow: hidden;
 }
 
 .titulo-producto {
@@ -31,6 +35,9 @@
 }
 
 .img-principal {
+  max-height: 400px;
+  width: 100%;
+  object-fit: contain;
   transition: transform 0.3s;
 }
 
@@ -39,6 +46,7 @@
 }
 
 .miniatura {
+  max-width: 70px;
   cursor: pointer;
   transition: transform 0.2s;
 }
