--- a/src/pages/DetalleProducto.css
+++ b/src/pages/DetalleProducto.css
@@ -1,14 +1,8 @@
-/* Css page DetalleProducto */
-
 .card-container {
   background: white;
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  max-width: 1200px;
-  min-height: 500px;
-  margin: auto;
-  overflow: hidden;
 }
 
 .titulo-producto {
@@ -46,15 +40,15 @@
 }
 
 .miniatura {
-  max-width: 70px;
+  max-width: 50px;
   cursor: pointer;
   transition: transform 0.2s;
 }
 
 .miniatura:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
-.botones button {
+/* .botones button {
   font-weight: bold;
-}
+} */
