--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -1,19 +1,15 @@
 .contact-container {
-  background: linear-gradient(135deg, #f6f6f6, #ddd);
-  padding: 50px 0;
-  border-radius: 10px;
-}
-
-h2 {
-  font-weight: bold;
-  color: #333;
+  max-width: 600px;
+  margin: auto;
+  padding: 40px 20px;
+  font-family: "Raleway", sans-serif;
+  color: #1e1e1e;
 }
 
 .contact-form {
-  background: white;
+  background: #e0fbfc;
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .input-container {
@@ -25,10 +21,9 @@ h2 {
   left: 10px;
   top: 50%;
   transform: translateY(-50%);
-  color: #555;
+  color: #3d5a80;
 }
-
-.contact-form input {
+.form-control {
   padding-left: 35px;
   border-radius: 5px;
 }
@@ -36,9 +31,4 @@ h2 {
 .submit-btn {
   width: 100%;
   font-weight: bold;
-  transition: 0.3s;
-}
-
-.submit-btn:hover {
-  background: #444;
 }
