--- a/src/components/SidebarFilters/SidebarFilters.css
+++ b/src/components/SidebarFilters/SidebarFilters.css
@@ -5,6 +5,11 @@
   border-radius: 20px;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
+  img {
+    object-fit: cover;
+    width: 100%;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .search input {
